updated cf link @1.0.2

--- a/main.tex
+++ b/main.tex
@@ -187,7 +187,7 @@
 \vspace{-6.5mm}
 %\href{https://auth.geeksforgeeks.org/user/sudo_arya}{\includegraphics[width=1cm,clip]{icons8-geeksforgeeks-480.png}\thinspace \thinspace}
 %\href{https://leetcode.com/sudo_arya/}{\includegraphics[width=1cm,clip]{icons8-level-up-your-coding-skills-and-quickly-land-a-job-96.png}\thinspace \thinspace}
-\href{https://leetcode.com/sudo_arya/}{\includegraphics[width=0.9cm,clip]{codeforces.png}}
+\href{https://codeforces.com/profile/TLE_lord}{\includegraphics[width=0.9cm,clip]{codeforces.png}}
 \hspace{0.5em}
 \href{https://github.com/sudo-arya/}{\includegraphics[width=1cm,clip]{icons8-github-480.png}}
 \hspace{0.5em}
