updated resume removed summary and created publications section

--- a/main.tex
+++ b/main.tex
@@ -209,28 +209,28 @@
 
 
 %-----------Summary-----------------
- \section{\textbf{Summary}}
- \vspace{0.3mm}
- { Constantly building actionable projects, learning upcoming technologies, and integrating these experiences to real world applications. I am dedicated to writing Industry friendly, scalable products that meet business requirements . Keen to drive innovation and efficiency for the organization. }
- \vspace{-2.6mm}
+ %\section{\textbf{Summary}}
+ %\vspace{0.3mm}
+ %{ Constantly building actionable projects, learning upcoming technologies, and integrating these experiences to real world applications. I am dedicated to writing Industry friendly, scalable products that meet business requirements . Keen to drive innovation and efficiency for the organization. }
+% \vspace{-2.6mm}
 
 
 %-----------EDUCATION-----------
 \section{\textbf{Education}}
   \resumeSubHeadingListStart
-  \vspace{1.2mm}
+  \vspace{1.8mm}
   \resumeSubheading
   {Indira Gandhi National Open University (IGNOU)}{CGPA\thinspace:{\textbf{\textcolor{sand}{ \thinspace ---}}}}
   {Pursuing masters program Master of Computer Application}{2024-26}
-  \vspace{-2.6mm}
+  %\vspace{-2.6mm}
     \resumeSubheading
       {Maharaja Surajmal Institute,Delhi}{CGPA\thinspace:{\textbf{\textcolor{sand}{ \thinspace 8.798}}}}
       {Completed undergraduate program Bachelor of Computer Application (Hons) in Data Science}{2021-24}
-      \vspace{-2.6mm}
+      %\vspace{-2.6mm}
     \resumeSubheading
       {12th Class}{Percentage\thinspace:{\textbf{\textcolor{sand}{ \thinspace75\%}}}}
       {Kala Niketan International School (CBSE), Delhi}{(offline) 2020}
-      \vspace{0.2mm}
+      %\vspace{0.2mm}
     
        
   \resumeSubHeadingListEnd
@@ -382,14 +382,25 @@
 \resumePORA{  \href{https://drive.google.com/file/d/1lbA1B5IqrB63UNGqP2AWA_5tU-p_JPjT/view}{{Secured \customtext{\textbf{\textcolor{sand}{1st}}}} place in {\customtext{\textbf{\textcolor{sand}{SIH 2023}}}} Hackathon, leading a team of 5 to develop "AyuMonk". {\color{gray}\textbf{(link \includegraphics[width=0.3cm,clip]{url.png})}}} } % Award
     {} % Event
     {} %Event Year
-    
-    \vspace{-1.5mm}
-    \resumePORA{  \href{https://drive.google.com/file/d/1jHHO7sfI8_siICWUdF21CH2A8n44mG2_/view?usp=sharing}{Presented a research paper at {\customtext{\textbf{\textcolor{sand}{Jamia Hamdard Conference}}}} {\color{gray}\textbf{(link \includegraphics[width=0.3cm,clip]{url.png})}}} } % Award
-    {} % Event
-    {} %Event Year
 
 \resumeSubHeadingListEnd
 \vspace{-4.4mm}
+
+
+
+%-----------Publications and Certifications-----------------
+\section{\textbf{Publications \& Conferences}}
+\vspace{-0.4mm}
+\resumeSubHeadingListStart
+
+\resumePORA{  \href{https://drive.google.com/file/d/1jHHO7sfI8_siICWUdF21CH2A8n44mG2_/view?usp=sharing}{Presented a winning paper at {\customtext{\textbf{\textcolor{sand}{ICIDSSD 2024, Jamia Hamdard}}}}, awarded Best Presenter \& Best Poster. {\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}}} } % Award
+{} % Event
+{} %Event Year
+
+\resumeSubHeadingListEnd
+\vspace{-4.4mm}
+
+
 
 %-----------Certifications-----------------
 \section{\textbf{Certifications}}
