updaetd resume increased resume worded score too 78

--- a/main.tex
+++ b/main.tex
@@ -246,6 +246,7 @@
   \vspace{-6.8mm}
   \resumeItemListStart
   \item { Currently developing \customtext{\textbf{\textcolor{sand}{IOT based Monitoring Solution}}} under Dr. Vivek Dixit}
+  \item { Managing a network of \customtext{\textbf{\textcolor{sand}{50–100 sensors}}} for real-time data collection.}
   \resumeItemListEnd
   \vspace{-1.2mm}
   
@@ -253,8 +254,8 @@
   {\href{}{ Frelance Web Developer}}{}{}{May 2024 - Present}
   \vspace{-6.8mm}
   \resumeItemListStart
-  \item { Developed and deployed websites for companies, tailored to their specific business needs.\\ {i.e. \href{https://galleontrading.netlify.app/}{\customtext{\textbf{\textcolor{sand}{Galleon Trading{\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}}}}}}, \href{https://infosecmediasolutions.com/}{\customtext{\textbf{\textcolor{sand}{Infosec Media Solutions{\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}} }}}} }}
-  \item { Worked closely with clients to ensure on-time delivery and post-deployment support. }
+  \item { Developed and deployed websites for 2 companies, tailored to their specific business needs,\\ {including \href{https://galleontrading.netlify.app/}{\customtext{\textbf{\textcolor{sand}{Galleon Trading{\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}}}}}}, \href{https://infosecmediasolutions.com/}{\customtext{\textbf{\textcolor{sand}{Infosec Media Solutions{\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}} }}}} }}
+  \item { Worked closely with \customtext{\textbf{\textcolor{sand}{5+}}} clients to ensure on-time delivery \& post-deployment support. }
   \resumeItemListEnd
   \vspace{-1.2mm}
   
@@ -264,8 +265,8 @@
   \vspace{-6.8mm}
   \resumeItemListStart
   \item { Core Team Member of college Software Development Cell.} 
-  \item { Engineered and optimized college software solutions, i.e.\customtext{\textbf{\textcolor{sand}{Attendance Management Solution}}}, \customtext{\textbf{\textcolor{sand}{ID Card Generator}}} and \customtext{\textbf{\textcolor{sand}{Alumni Management Portal}}}, within a cross-functional team, utilized \customtext{\textbf{\textcolor{sand}{Agile}}} methodologies \& version control systems (\customtext{\textbf{\textcolor{sand}{Git}}}) to streamline development processes \& ensure efficient collaboration.}
-  \item {Implemented data processing systems, saving \customtext{\textbf{\textcolor{sand}{20+ hrs/week}}} in manual effort for faculty and staff.}
+  \item { Engineered and optimized college software solutions, i.e.\customtext{\textbf{\textcolor{sand}{Attendance Management Solution}}}, \customtext{\textbf{\textcolor{sand}{ID Card Generator}}} and \customtext{\textbf{\textcolor{sand}{Alumni Management Portal}}}, within a cross-functional team of 4 members. Utilized \customtext{\textbf{\textcolor{sand}{Agile}}} methodologies \& version control systems (\customtext{\textbf{\textcolor{sand}{Git}}}) to streamline development processes \& ensure efficient collaboration efficiency by 25\%.}
+  \item {Deployed data processing systems, saving \customtext{\textbf{\textcolor{sand}{20+ hrs/week}}} in manual effort for faculty and staff.}
   \resumeItemListEnd
   
   \vspace{-1.6mm}
@@ -326,7 +327,7 @@
     
     \resumeItemListStart
     \item { Developed a \customtext{\textbf{\textcolor{sand}{Chrome extension}}} that dictates selected text on webpages, enhancing accessibility \& user experience.}
-    \item { Implemented feature allowing users to configure TTS to pause after a \customtext{\textbf{\textcolor{sand}{specific number}}} of words for a \customtext{\textbf{\textcolor{sand}{defined duration}}}.}
+    \item { Integrated feature allowing users to configure TTS to pause after a \customtext{\textbf{\textcolor{sand}{specific number}}} of words (e.g., 5 or 10) for a \customtext{\textbf{\textcolor{sand}{defined duration}}} (e.g., 1–10 seconds).}
     
     \resumeItemListEnd
     \vspace{-2.5mm}   
@@ -382,6 +383,12 @@
 \resumePORA{  \href{https://drive.google.com/file/d/1lbA1B5IqrB63UNGqP2AWA_5tU-p_JPjT/view}{{Secured \customtext{\textbf{\textcolor{sand}{1st}}}} place in {\customtext{\textbf{\textcolor{sand}{SIH 2023}}}} Hackathon, leading a team of 5 to develop "AyuMonk". {\color{gray}\textbf{(link \includegraphics[width=0.3cm,clip]{url.png})}}} } % Award
     {} % Event
     {} %Event Year
+    
+\vspace{-1.5mm}
+\resumePORA{ Recognized by NPTEL as an  \href{https://archive.nptel.ac.in/content/noc/NOC23/SEM1/Ecertificates/NPTEL_Stars/NPTEL_BELIEVERS/NPTELSS12306100270.jpg}{{\customtext{\textbf{\textcolor{sand}{NPTEL Believer}}}}{\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}}},\href{https://archive.nptel.ac.in/content/noc/NOC24/SEM1/Ecertificates/NPTEL_Stars/NPTEL_MOTIVATED_LEARNERS/NPTELSS1240101650.jpg}{{\customtext{\textbf{\textcolor{sand}{Motivated Learner}}}}{\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}}} and \href{https://archive.nptel.ac.in/content/noc/NOC23/SEM2/Ecertificates/NPTEL_Stars/NPTEL_ENTHUSIASTS/NPTELSS22303101775.jpg}{{\customtext{\textbf{\textcolor{sand}{Enthusiast}}}}{\color{gray}\textbf{(\includegraphics[width=0.3cm,clip]{url.png})}}} showcasing \\ 
+\thinspace \thinspace dedication to continuous learning and upskilling.}  % Award
+	{} % Event
+	{} %Event Year
 
 \resumeSubHeadingListEnd
 \vspace{-4.4mm}
