--- a/main.tex
+++ b/main.tex
@@ -224,7 +224,7 @@
   {Pursuing masters program Master of Computer Application}{2024-26}
   %\vspace{-2.6mm}
     \resumeSubheading
-      {Maharaja Surajmal Institute,Delhi}{CGPA\thinspace:{\textbf{\textcolor{sand}{ \thinspace 8.798}}}}
+      {Maharaja Surajmal Institute, Delhi}{CGPA\thinspace:{\textbf{\textcolor{sand}{ \thinspace 8.798}}}}
       {Completed undergraduate program Bachelor of Computer Application (Hons) in Data Science}{2021-24}
       %\vspace{-2.6mm}
     \resumeSubheading
@@ -265,7 +265,7 @@
   \vspace{-6.8mm}
   \resumeItemListStart
   \item { Core Team Member of college Software Development Cell.} 
-  \item { Engineered and optimized college software solutions, i.e.\customtext{\textbf{\textcolor{sand}{Attendance Management Solution}}}, \customtext{\textbf{\textcolor{sand}{ID Card Generator}}} and \customtext{\textbf{\textcolor{sand}{Alumni Management Portal}}}, within a cross-functional team of 4 members. Utilized \customtext{\textbf{\textcolor{sand}{Agile}}} methodologies \& version control systems (\customtext{\textbf{\textcolor{sand}{Git}}}) to streamline development processes \& ensure efficient collaboration efficiency by 25\%.}
+  \item { Engineered and optimized college software solutions, i.e.\customtext{\textbf{\textcolor{sand}{Attendance Management Solution}}}, \customtext{\textbf{\textcolor{sand}{ID Card Generator}}}, and \customtext{\textbf{\textcolor{sand}{Alumni Management Portal}}}, within a cross-functional team of 4 members. Utilized \customtext{\textbf{\textcolor{sand}{Agile}}} methodologies \& version control systems (\customtext{\textbf{\textcolor{sand}{Git}}}) to streamline development processes \& ensure efficient collaboration efficiency by 25\%.}
   \item {Deployed data processing systems, saving \customtext{\textbf{\textcolor{sand}{20+ hrs/week}}} in manual effort for faculty and staff.}
   \resumeItemListEnd
   
@@ -290,7 +290,7 @@
 	{} %Event Dates
 	
 	\resumeItemListStart
-	\item { Developed a \customtext{\textbf{\textcolor{sand}{two-click}}} attendance marking system that allows faculty to take attendance using \customtext{\textbf{\textcolor{sand}{QR code}}}, transitioning from a pen-and-paper method to a digital platform.}
+	\item { Developed a \customtext{\textbf{\textcolor{sand}{two-click}}} attendance marking system that allows faculty to take attendance using a \customtext{\textbf{\textcolor{sand}{QR code}}}, transitioning from a pen-and-paper method to a digital platform.}
 	\item { Created a \customtext{\textbf{\textcolor{sand}{mobile app}}} enabling secure attendance marking with \customtext{\textbf{\textcolor{sand}{Google login}}}, allowing students to view their attendance history and providing detailed reporting, enhancing user experience and reducing human error.}
 	
 	\resumeItemListEnd
@@ -302,8 +302,8 @@
       {} %Event Dates
       
       \resumeItemListStart
-        \item {Provides a platform enabling \customtext{\textbf{\textcolor{sand}{real-time messaging}}}, whether for personal use or connecting with friends. Seamlessly transition between one-on-one chats \& group conversations within a \customtext{\textbf{\textcolor{sand}{user-friendly interface}}}, enhancing online communication experience.}
-        \item {Refined skills in \customtext{\textbf{\textcolor{sand}{real-time communication}}} and enhancing proficiency in full-stack development.}
+        \item {Provides a platform enabling \customtext{\textbf{\textcolor{sand}{real-time messaging}}}, whether for personal use or connecting with friends. Seamlessly transition between one-on-one chats \& group conversations within a \customtext{\textbf{\textcolor{sand}{user-friendly interface}}}, enhancing the online communication experience.}
+        \item {Refined skills in \customtext{\textbf{\textcolor{sand}{real-time communication}}} and enhanced proficiency in full-stack development.}
         
     \resumeItemListEnd
     \vspace{-3.335mm}   
@@ -380,7 +380,7 @@
     {} %Event Year
     
 \vspace{-1.5mm}
-\resumePORA{  \href{https://drive.google.com/file/d/1lbA1B5IqrB63UNGqP2AWA_5tU-p_JPjT/view}{{Secured \customtext{\textbf{\textcolor{sand}{1st}}}} place in {\customtext{\textbf{\textcolor{sand}{SIH 2023}}}} Hackathon, leading a team of 5 to develop "AyuMonk". {\color{gray}\textbf{(link \includegraphics[width=0.3cm,clip]{url.png})}}} } % Award
+\resumePORA{  \href{https://drive.google.com/file/d/1lbA1B5IqrB63UNGqP2AWA_5tU-p_JPjT/view}{{Secured \customtext{\textbf{\textcolor{sand}{1st}}}} place in {\customtext{\textbf{\textcolor{sand}{SIH 2023}}}} Hackathon, leading team of 5 to develop "AyuMonk". {\color{gray}\textbf{(link \includegraphics[width=0.3cm,clip]{url.png})}}} } % Award
     {} % Event
     {} %Event Year
     
@@ -422,7 +422,7 @@
     {} %Event Year
 
 \vspace{-1.5mm}
-\resumePOR{ Completed {\customtext{\textbf{\textcolor{sand}{9 MOOC}}}} courses by {\customtext{\textbf{\textcolor{sand}{NPTEL}}}}(IIT Madras){\color{gray}\textbf{(Courses name are clickable \includegraphics[width=0.3cm,clip]{url.png})}}} % Award
+\resumePOR{ Completed {\customtext{\textbf{\textcolor{sand}{9 MOOC}}}} courses by {\customtext{\textbf{\textcolor{sand}{NPTEL}}}}(IIT Madras){\color{gray}\textbf{(Courses names are clickable \includegraphics[width=0.3cm,clip]{url.png})}}} % Award
     {\\ \thinspace \thinspace \href{https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS93S1324053909029523}{Embedded System Design}, \href{https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS78S2324114009029523}{OS}, \href{https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL23CS44S2344088504100972}{Ethical Hacking}, \href{https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL23CS47S3344132104100972}{Blockchain}, \href{https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL23CS40S4442171903039511}{Soft Computing}, 
 	\href{https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL23HS30S4344245804100972}{Enhancing Soft Skills},
 	\\ \thinspace \thinspace \href{https://archive.nptel.ac.in/content/noc/NOC24/SEM1/Ecertificates/108/noc24-ee38/Course/NPTEL24EE38S45430276730459110.pdf}{Computer Vision}, \href{https://archive.nptel.ac.in/content/noc/NOC23/SEM2/Ecertificates/106/noc23-cs127/Course/NPTEL23CS127S63430921520146520.pdf}{Cyber Security and Privacy}, \href{https://archive.nptel.ac.in/content/noc/NOC23/SEM2/Ecertificates/106/noc23-cs106/Course/NPTEL23CS106S53430894920146520.pdf}{Social Network and Analysis}} % Event
